# JAX-bandflux

./: .airules  .cursorrules  .gitignore  .readthedocs.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README_new.md  REVIEW_PR_MAPPING.md  check_devices.py  debug_comparison.py  debug_gpu.py  debug_gpu_minimal.py  fmin_bfgs.py  load_hsf_data.py  main.py  main_old.py  ns.py  ns_anomaly.py  paper.bib  paper.md  parameter_statistics.txt  plot_comparison.py  plot_light_curve.py  profiling_ns.py  pyproject.toml  repo_structure.yaml  requirements.txt  run_ns_cpu.py  run_ns_gpu.py  salt3nir_sampler.py  settings.yaml  setup.py  sncosmo-fitter-jax.py  (+8 more)
docs/: Makefile  README.md  api.rst  api_differences.rst  bandpass_loading.rst  conf.py  data_loading.rst  dust.rst  dust_extinction_architecture.md  examples.rst  index.rst  installation.rst  model_fluxes.rst  quickstart.rst  readthedocs_deployment_guide.rst  requirements.txt  sampling.rst  timeseries_source.md  timeseries_source.rst
example-codes/: jaxns-ex.py
examples/: custom_bandpass_example.py  custom_sed_example.py  download_svo_filter.py  dust_extinction_example.py  extract_wfcam_j_bandpass.py  fmin_bfgs.py  ns.ipynb  ns.py  ns_anomaly.py  ns_gpu.py  ns_multi_sn.py  ns_multi_sn_shifts.py  ns_original.py  ns_with_shifts.py  parallel_ns_anomaly.py  plot_comparison.py  plot_light_curve.py  plot_model_comparison.py  profile_likelihood.py  test_multi_sn.py  timeseries_source_demo.py
jax_supernovae/: __init__.py  bandpasses.py  constants.py  core.py  (+13 more)
(+136 files in other folders)
